Switch TESSIndex from short to int for OpenGL compatability

--- a/libs/tess2/Makefile.armv7l
+++ b/libs/tess2/Makefile.armv7l
@@ -1,5 +1,5 @@
-DEFINES=-DTARGET_OPENGLES
-DEFINES+=-DTARGET_OPENGLES2
+#DEFINES=-DTARGET_OPENGLES
+#DEFINES+=-DTARGET_OPENGLES2
 CC=gcc
 
 CFLAGS=$(DEFINES)
